[metadata]
name = django-ezaad
version = 0.1.0
description = A Django app to login by azure web app with scim2.
long_description = file: README.md
url = https://github.com/hankei6km/django-ezaad
author = hankei6km
author_email = hankei6km@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    django-oauth-toolkit
    django-scim2  # not pinning, should always work with latest release
    django-cors-middleware >= 1.5